--- a/css/main.scss
+++ b/css/main.scss
@@ -5,7 +5,7 @@ body {
 
 h1 {
 	font-size: 5rem;
-	color: #1d1d1d;
+	color: #78ae04;
 }
 
 section {
@@ -14,24 +14,24 @@ section {
 	display: grid;
 	place-content: center;
 
-	p:not(:nth-of-type(1)) {
+	p {
 		font-size: clamp(2rem, 5vw, 8rem);
 	}
 
 	&:nth-of-type(1) {
-		border-bottom: 1px solid #1d1d1d;
+		border-bottom: 4px solid #78ae04;
 	}
 
-	&:nth-of-type(2) {
+	&:nth-of-type(3) {
 		background-color: #e6ff5a;
 	}
 
-	&:nth-of-type(4) {
+	&:nth-of-type(4n+1) {
 		background-color: #091118;
 		color: white;
 	}
 
-	p:not(:nth-of-type(1)) {
+	p.reveal-type {
 		animation: textAnimate linear both;
 		animation-timeline: view(block);
 		animation-range: cover 0% contain 40%;
@@ -51,11 +51,14 @@ section {
 			}
 		}
 
-		p span {
+		p {
 			font-size: 1.95rem;
 			line-height: 3rem;
-			animation-range-start: contain 12vh;
-			animation-range-end: contain 50vh;
+
+			span {
+				animation-range-start: contain 12vh;
+				animation-range-end: contain 50vh;
+			}
 		}
 
 		span {
